src/objects/MUSW__Permit_Contractor__c.object
<CustomObject>
    <description>Contractors associated to a permit</description>
    <fields>
        <fullName>Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <formula>IF(TODAY() &gt; License_Expiry__c || ISNULL(License_Expiry__c), &quot;EXPIRED&quot;, &quot;LICENSED&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Permits as Contractor</relationshipLabel>
        <relationshipName>Permits_Contracted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Contractor_Type__c</fullName>
        <label>Contractor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plumber</fullName>
                </value>
                <value>
                    <fullName>Electrician</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Roofer</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                    <default>true</default>
                    <label>Builder</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Contractors</relationshipLabel>
        <relationshipName>Contractors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit__c</referenceTo>
        <relationshipName>Contractors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Permit Contractor</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>